  a request more often
- Use proper preview URL for brightcove content (#7030).
- Adapted last_semantic_change from date_last_modified
- Use an empty string instead of null in REST calls for brightcove does not
  recognize null
- Update brightcove videos if video_still is updated. Even though the
  modified_date is not updated, this might happen in upstream.  


0.5.0 (2010-06-09)
------------------

- Added solr indexes for banner and banner-id (#7382).
- Update videos "latest modified first" (#7209).
- Add uniqueId to asset references (#7381).


0.4.1 (2010-06-03)
------------------

- Handle missing expire dates when writing asset references.
- Add id_prefix to the interface so it gets security clearance.


0.4.0 (2010-06-02)
------------------

- Add a solr index 'h264_url' that contains the 'flv_url' of the video (#7362).
- Change update-repository to be long-running instead of one-shot (#7339).
- Provide an adapter to ITimeBasedPublishing, so videos get an expires
  attribute when included in a centerpage (#7335).
- Allow both videos and playlists as assets (#7195).
- Prefix the IDs of video/playlist assets in XML (vid123/pls987) (#7194).
- Add expires attribute to asset XML-references (#7380).


0.3.2 (2010-05-06)
------------------

- Explicitly index solr instead of modified event which causes the modification
  time to change.


0.3.1 (2010-05-06)
------------------

- Do not unconditionally delete all playlists from solr but only those we know
  about but brightcove doesn't know about.

- Update solr synchronously. The async updating was not intentional.


0.3.0 (2010-05-03)
------------------

- The repository does not access the Brightcove API directly anymore, it only
  functions as a local cache. It is populated periodically by cron (Solr is
  updated then, too, as a "byproduct"). (#7150, #7163)


0.2.1 (2010-04-27)
------------------

- Fully implement IPublishInfo interface for videos and playlist.


0.2.0 (2010-04-22)
------------------
