@@ -8,4 +8,5 @@ def test_suite():
     return zeit.brightcove.testing.FunctionalDocFileSuite(
         'asset.txt',
         'browser.txt',
+        'reference.txt',
         package='zeit.brightcove')
